chapter13/pod-add-settime-capability.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-add-settime-capability
spec:
  containers:
    - name: main
      image: alpine
      command:
        - "/bin/sleep"
        - "infinity"
      securityContext:
        capabilities:
          add:
            - "SYS_TIME"
