chapter13/pod-as-user-guest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-as-user-guest
spec:
  containers:
    - name: main
      image: alpine
      command:
        - "/bin/sleep"
        - "infinity"
      securityContext:
        runAsUser: 405
