chapter13/pod-run-as-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-run-as-non-root
spec:
  containers:
    - name: main
      image: alpine
      command:
        - "/bin/sleep"
        - "infinity"
      securityContext:
        runAsNonRoot: true
