chapter13/pod-with-host-pid-and-ipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-pid-and-ipc
spec:
  hostPID: true
  hostIPC: true
  containers:
    - name: main
      image: alpine
      command:
        - "/bin/sleep"
        - "infinity"
